Create navbar, space center elements, add color to buttons, lengthened search bar

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
     <div class="container">
       <div class="center-objects">
-        <img src="images/googlelogo.png">
+        <img src="images/googlelogo.png" class="google-logo">
         <div>
           <input type="text" class="search-bar">
         </div>
         <div class="center-buttons">
-          <button class="search-button">Google Search</button>
-          <button class="lucky-button">I'm Feeling Lucky</button>
+          <input value="Google Search" name="btnK" type="submit">
+          <input value="I'm Feeling Lucky" name="btnI" type="submit">
         </div>
       </div>
 
