Reinitialized repo with boilerplate files- 3 year hiatus

--- a/index.html
+++ b/index.html
@@ -1,36 +1,18 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Google Homepage</title>
+<!doctype html>
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="main.css">
-  </head>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
 
-  <body>
-    <div class="navbar">
-      <ul>
-        <li><a>Gmail</a></li>
-        <li><a>Images</a></li>
-        <li><a>Boxes</a></li>
-        <li><a>Sign In</a></li>
-      </ul>
-    </div>
+  <title>Google Homepage Clone</title>
+  <meta name="description" content="Google Homepage Clone">
+  <meta name="author" content="ChristopherLiu">
 
-    <div class="container">
-      <div class="center-objects">
-        <img src="images/googlelogo.png" class="google-logo">
-        <div>
-          <input type="text" class="search-bar">
-        </div>
-        <div class="center-buttons">
-          <input value="Google Search" name="btnK" type="submit">
-          <input value="I'm Feeling Lucky" name="btnI" type="submit">
-        </div>
-      </div>
+  <link rel="stylesheet" href="css/styles.css">
 
-    </div>
+</head>
 
-  </body>
+<body>
+  <script src="js/scripts.js"></script>
+</body>
 </html>
