--- a/index.html
+++ b/index.html
@@ -13,6 +13,38 @@
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
+  <nav>
+    <ul class="left-nav">
+      <li><a>About</a></li>
+      <li><a>Store</a></li>
+    </ul>
+    <ul class="right-nav">
+      <li><a>Gmail</a></li>
+      <li><a>Images</a></li>
+      <li><a>Grid Button</a></li>
+      <button>Sign In</button>
+    </ul>
+  </nav>
+
+  <div class="center-elements">
+    <img src="images/googlelogo.png">
+    <input type="text">
+    <button>Google Search</button>
+    <button>I'm Feeling Lucky</button>
+  </div>
+
+  <footer>
+    <ul class="left-footer">
+      <li><a>Advertising</a></li>
+      <li><a>Business</a></li>
+      <li><a>How Search Works</a></li>
+    </ul>
+    <ul class="right-footer">
+      <li><a>Privacy</a></li>
+      <li><a>Terms</a></li>
+      <li><a>Settings</a>a></li>
+    </ul>
+  </footer>
+
 </body>
 </html>
