Move footer to bottom and set color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Google Homepage Clone">
   <meta name="author" content="ChristopherLiu">
 
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles/styles.css">
 
 </head>
 
