Update nav and footer to use flexbox

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <div class="center-elements">
     <img src="images/googlelogo.png">
-    <input type="text">
+    <input class="search-bar" type="text">
     <button>Google Search</button>
     <button>I'm Feeling Lucky</button>
   </div>
@@ -42,7 +42,7 @@
     <ul class="right-footer">
       <li><a>Privacy</a></li>
       <li><a>Terms</a></li>
-      <li><a>Settings</a>a></li>
+      <li><a>Settings</a></li>
     </ul>
   </footer>
 
