Add structure and styling to all elements

--- a/index.html
+++ b/index.html
@@ -14,36 +14,40 @@
 
 <body>
   <nav>
-    <ul class="left-nav">
-      <li><a>About</a></li>
-      <li><a>Store</a></li>
-    </ul>
-    <ul class="right-nav">
-      <li><a>Gmail</a></li>
-      <li><a>Images</a></li>
-      <li><a>Grid Button</a></li>
+    <div class="left-nav">
+      <a>About</a>
+      <a>Store</a>
+    </div>
+    <div class="right-nav">
+      <a>Gmail</a>
+      <a>Images</a>
+      <a>Grid Button</a>
       <button>Sign In</button>
-    </ul>
+    </div>
   </nav>
 
-  <div class="center-elements">
-    <img src="images/googlelogo.png">
-    <input class="search-bar" type="text">
-    <button>Google Search</button>
-    <button>I'm Feeling Lucky</button>
+  <div class="center-block">
+    <img class="center-elements" src="images/googlelogo.png">
+    <form class="center-elements">
+      <input class="search-elements search-bar" type="text">
+      <div class="search-elements search-buttons">
+        <button>Google Search</button>
+        <button>I'm Feeling Lucky</button>
+      </div>
+    </form>
   </div>
 
   <footer>
-    <ul class="left-footer">
-      <li><a>Advertising</a></li>
-      <li><a>Business</a></li>
-      <li><a>How Search Works</a></li>
-    </ul>
-    <ul class="right-footer">
-      <li><a>Privacy</a></li>
-      <li><a>Terms</a></li>
-      <li><a>Settings</a></li>
-    </ul>
+    <div class="left-footer">
+      <a href="#">Advertising</a>
+      <a href="#">Business</a>
+      <a href="#">How Search Works</a>
+    </div>
+    <div class="right-footer">
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <a href="#">Settings</a>
+    </div>
   </footer>
 
 </body>
