--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
   <nav>
     <div class="left-nav">
-      <a>About</a>
-      <a>Store</a>
+      <a href="#">About</a>
+      <a href="#">Store</a>
     </div>
     <div class="right-nav">
-      <a>Gmail</a>
-      <a>Images</a>
-      <a>Grid Button</a>
+      <a href="#">Gmail</a>
+      <a href="#">Images</a>
+      <a href="#">Grid Button</a>
       <button>Sign In</button>
     </div>
   </nav>
