Style sign-in button

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="right-nav">
       <a href="#">Gmail</a>
       <a href="#">Images</a>
-      <a href="#">Grid Button</a>
-      <button>Sign In</button>
+      <a href="#">GRID</a>
+      <button class="sign-in-button">Sign in</button>
     </div>
   </nav>
 
