Vertically align hamburger icon

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="right-nav">
       <a href="#">Gmail</a>
       <a href="#">Images</a>
-      <a href="#">GRID</a>
+      <a href="#"><img src="images/patty.svg"></a>
       <button class="sign-in-button">Sign in</button>
     </div>
   </nav>
